# crypto

./: README.md  meson.build
data/: com.github.com.hmleal.desktop.in.in  file.gresource.xml  meson.build  stylesheet.css
data/ui/: menus.ui
po/: POTFILES.in
src/: Application.vala  meson.build
src/Layouts/: HeaderBar.vala
