# install_data(
#     'assets/icons/com.github.com.hmleal.crypto.bitcoin-btc.svg',
#     install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps'
# )

icons_dir = join_paths(get_option('datadir'), 'icons', 'hicolor')

install_data(
    join_paths('assets', 'icons', 'com.github.com.hmleal.crypto.bitcoin-btc.svg'),
    install_dir: join_paths(icons_dir , '32x32', 'status'),
)

install_data(
    join_paths('assets', 'icons', 'com.github.com.hmleal.crypto.ethereum-eth.svg'),
    install_dir: join_paths(icons_dir , '32x32', 'status'),
)

install_data(
    join_paths('assets', 'icons', 'com.github.com.hmleal.crypto.bitcoin-cash-bch.svg'),
    install_dir: join_paths(icons_dir , '32x32', 'status'),
)
